# ncku-data-mining-2025

./: README.md  hello.py  pyproject.toml
hw1/: F74114752_李緒成_HW1.ipynb  F74116194_林宥呈_HW1.ipynb  P12345678_template_HW1.ipynb
